add column ADD NEW DRINK

--- a/Prototype/V2/style.css
+++ b/Prototype/V2/style.css
@@ -24,6 +24,14 @@ li{
     text-align: left;
 }
 
+/*water*/
+.water,.stockWater{
+    visibility: visible;
+}
+.addNewDrink{
+    visibility: visible;
+}
+
 /* KITCHEN */
 #kitchen th,td{
     font-size: 1.3em;
@@ -50,7 +58,7 @@ button{
 }
 
 /* EVENTS */
-.stock{
+#stock{
     background-color: white;
 }
 #balance{
